[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player/Hooks/BasicWeapon.gd" type="Script" id=1]
[ext_resource path="res://Player/default_arrow.png" type="Texture" id=2]
[ext_resource path="res://Player/aiming_sprite.png" type="Texture" id=3]

[node name="BasicWeapon" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="GrappleCast" type="RayCast2D" parent="." index="0"]

enabled = true
exclude_parent = true
cast_to = Vector2( 0, 1000 )
collision_mask = 6
_sections_unfolded = [ "Transform" ]

[node name="EdgeRay1" type="RayCast2D" parent="GrappleCast" index="0"]

position = Vector2( 55, 30 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 1000 )
collision_mask = 6
_sections_unfolded = [ "Transform" ]

[node name="EdgeRay2" type="RayCast2D" parent="GrappleCast" index="1"]

position = Vector2( -55, 30 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 1000 )
collision_mask = 6
_sections_unfolded = [ "Transform" ]

[node name="ArrowSprite" type="Sprite" parent="GrappleCast" index="2"]

position = Vector2( 0.095701, 36.3818 )
scale = Vector2( 1, -1 )
z_index = -1
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="AimingSprite" type="Sprite" parent="GrappleCast" index="3"]

modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( -1.5, 36.3818 )
z_index = -1
texture = ExtResource( 3 )
centered = false
_sections_unfolded = [ "Offset", "Transform", "Visibility", "Z Index" ]

[node name="MissDisplay" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="GrappleCoolDown" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[connection signal="timeout" from="MissDisplay" to="." method="_on_MissDisplay_timeout"]

[connection signal="timeout" from="GrappleCoolDown" to="." method="_on_GrappleCoolDown_timeout"]


